# ComputerGraphicsProject

./: CGCanvas.cpp  CGCanvas.hpp  CMakeLists.txt  FindDialog.cpp  MainWindow.hpp  README.md  main.cpp
ApplicationLogic/: CMakeLists.txt  GameObject.cpp  GameObject.hpp  Grid.cpp  Grid.hpp  Light.cpp  Light.hpp  MainCamera.cpp  MainCamera.hpp  Material.cpp  Material.hpp  Model.cpp  Model.hpp  PointLights.cpp  PointLights.hpp  Shader.cpp  Shader.hpp  Terrain.cpp  Terrain.hpp  Textures.cpp  Textures.hpp  TransformData.cpp  TransformData.hpp  Vertices.hpp  World.cpp  World.hpp  utilityFunctions.hpp
ApplicationLogic/Agents/: Agent.hpp  CMakeLists.txt  CoastlineAgent.cpp  CoastlineAgent.hpp  MountainAgent.cpp  MountainAgent.hpp
ApplicationLogic/L-Systems/: CMakeLists.txt  LSystem.cpp  LSystem.hpp  Plant.cpp  Plant.hpp  Turtle.cpp  Turtle.hpp  testing  testing.txt
ApplicationLogic/temp/: CMakeLists.txt  TempCanvas.cpp  TempCanvas.hpp
ApplicationLogic/utils/: CMakeLists.txt  InputManager.cpp  InputManager.hpp  PerlinNoise.cpp  PerlinNoise.hpp  utilityFunctions.cpp  utilityFunctions.hpp
ExternalLibs/SOIL/lib/: libSOIL.dylib
ExternalLibs/assimp/3.1.1/: INSTALL_RECEIPT.json
ExternalLibs/assimp/3.1.1/lib/pkgconfig/: assimp.pc
ExternalLibs/glew/1.12.0/: INSTALL_RECEIPT.json
ExternalLibs/glew/1.12.0/lib/: libGLEWmx.1.12.0.dylib
QtCode/: CGCanvas.cpp  CGCanvas.hpp  CMakeLists.txt  CoastLineTab.cpp  CoastLineTab.hpp  FindDialog.h  MainWindow.cpp  MainWindow.hpp  MountainTab.cpp  MountainTab.hpp  TerrainDisplayTab.cpp  TerrainDisplayTab.hpp  ui_coastlinetab.hpp  ui_mainwindow.hpp  ui_mountaintab.hpp  ui_terraindisplaytab.hpp
shaders/TerrainShader/: TerrainFrag.glsl  TerrainFragShader.glsl  TerrainTCShader.glsl  TerrainTEShader.glsl  TerrainVertex.glsl  TerrainVertexShader.glsl
shaders/TestShader/: basicFrag.glsl  basicVertex.glsl
shaders/basicShader/: basicFrag.glsl  basicVertex.glsl
shaders/lighting/: LightingFrag.glsl  LightingVertex.glsl
temp/: main.txt
